tests/ui/consts/required-consts/collect-in-dead-vtable.opt.stderr
error[E0080]: evaluation of `Fail::<i32>::C` failed
  --> $DIR/collect-in-dead-vtable.rs:9:19
   |
LL |     const C: () = panic!();
   |                   ^^^^^^^^ evaluation panicked: explicit panic
   |
   = note: this error originates in the macro `$crate::panic::panic_2015` which comes from the expansion of the macro `panic` (in Nightly builds, run with -Z macro-backtrace for more info)

note: erroneous constant encountered
  --> $DIR/collect-in-dead-vtable.rs:22:21
   |
LL |             let _ = Fail::<T>::C;
   |                     ^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn <std::vec::Vec<i32> as MyTrait>::not_called`
  --> $DIR/collect-in-dead-vtable.rs:31:40
   |
LL |         let gen_vtable: &dyn MyTrait = &v; // vtable is "mentioned" here
   |                                        ^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
